frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banka-2-ingress-api
  namespace: banka-2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: banka-2.si.raf.edu.rs
      http:
        paths:
          - pathType: ImplementationSpecific
            path: "/api/user-service(/|$)(.*)"
            backend:
              service:
                name: user-service
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banka-2-ingress-frontend
  namespace: banka-2
spec:
  ingressClassName: nginx
  rules:
    - host: banka-2.si.raf.edu.rs
      http:
        paths:
          - pathType: ImplementationSpecific
            path: "/"
            backend:
              service:
                name: frontend
                port:
                  number: 80
